<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一路追梦想</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error">数据获取失败</string>
    <string name="blog_title">这是标题</string>
    <string name="blog_intro">这是简介</string>
    <string name="slide_menu_title">一路追梦想</string>
    <string name="sort_title">分类</string>
    <string name="function_title">功能</string>
    <string name="android">Android</string>
    <string name="c">C/C++</string>
    <string name="java">Java</string>
    <string name="linux">Linux</string>
    <string name="career">职业</string>
    <string name="twitter">碎碎念</string>
    <string name="articles_rss">文章RSS</string>
    <string name="comments_rss">评论RSS</string>

</resources>
